@@ -56,7 +56,7 @@ paths = ${django:mediaroot}
 Django = 1.6.1
 appy = 0.8.3
 mr.developer = 1.25
-django-leaflet = 0.11.0
+django-leaflet = 0.11.1
 django-geojson = 2.3.0
 django-appypod = 0.0.2
 isotoma.recipe.django = 3.1.7
